# ArtifactCore

./: .gitignore  ArtifactCore.qtvscr  ArtifactCore.sln  ArtifactCore.vcxproj  ArtifactCore.vcxproj.filters  ArtifactCore.vcxproj.filters.bak  BasicPixel.h  CMakeLists.txt  CMakeLists.txt.txt  Channel.ifc  FloatColor.ifc  FloatRGBA.ifc  Generator.ifc  GlowCS.ixx  Image.cppm  Image.ifc  NetworkRPCClient.ixx  NetworkRPCServer.ixx  OS.ifc  Transform.ifc  check_remaining.py  fix_modules.py
ImplementationPlans/: ShaderNode.md
cmake/: ArtifactCoreMigrationSeed.cmake
docs/: AUDIO_PERFORMANCE_ARCHITECTURE_2026-06-05.md  ArtifactCore_AI_Feature_Map_2026-04-10.md  ArtifactCore_Feature_List.en.md  ArtifactCore_Feature_List.ja.md  ArtifactCore_Feature_List.md  ArtifactCore_Feature_List.zh.md  CMAKE_MIGRATION_PREP_2026-03-02.md  CORE_NATIVE_DIAGNOSTICS_PLAN_2026-07-11.md  CORE_NATIVE_STRING_BOUNDARY_PLAN_2026-07-11.md  CREATIVE_EFFECTS_MEMO.md  ExpressionEngine_Usage.cpp  FrameRange_Usage.md  MFFrameExtractor_Usage.md  MILESTONES_CORE_BACKLOG.md  MILESTONE_2D_RIG_SYSTEM_2026-04-15.md  MILESTONE_DETERMINISTIC_SNAPSHOT_CAPABILITY_CONTRACT_2026-04-09.md  MILESTONE_FFMPEG_ENCODER_2026-03-17.md  MILESTONE_GPU_TEXT_RENDERING_JA_2026-04-01.md  MILESTONE_GPU_TEXT_RENDERING_JA_EXECUTION_2026-04-30.md  MILESTONE_INTERNAL_EVENT_SYSTEM_2026-03-24.md  MILESTONE_LAYER_COMPOSITION_SNAPSHOT_2026-04-14.md  MILESTONE_NLE_CORE_2026-04-09.md  MILESTONE_NLE_CORE_SERVICE_DESIGN_2026-04-09.md  MILESTONE_NLE_CORE_TYPE_DESIGN_2026-04-09.md  MILESTONE_PARAMETRIC_COMPOSITION_2026-06-05.md  MILESTONE_PYRO_VOLUME_SIMULATION_CORE_2026-06-27.md  MILESTONE_RENDER_FOUNDATION_TRIAD_2026-07-18.md  MILESTONE_TEXT_LAYOUT_CONTRACT_2026-06-12.md  MILESTONE_TEXT_SHAPING_BACKEND_HARFBUZZ_2026-06-12.md  MILESTONE_TEXT_SHAPING_BACKEND_HARFBUZZ_EXECUTION_2026-06-12.md  MILESTONE_TEXT_SYSTEM_2026-03-12.md  MILESTONE_TRACK_MATTE_CORE_2026-03-26.md  MILESTONE_TYPED_BACKGROUND_TASK_RUNTIME_2026-04-09.md  MILESTONE_VOLUME_PRODUCTION_CORE_2026-07-07.md  MOTION_TRAIL_MEMO.md  MultiLanguageSyntax_Examples.cpp  PREMIUM_EFFECTS_MEMO.md  PlaybackClock_Usage.md  REFERENCE_ECS_ARCHIVE_WICKED_ENGINE.md  REFERENCE_FLAGS_PATTERN_WICKED_ENGINE.md  (+5 more)
ifc/: AbstractEncoder.ifc  AssetConverter.ifc  Channel.ifc  FloatRGBA.ifc  Image.ifc  Layer2D.ifc  OS.ifc  Rotate.ifc  Scale.ifc  Transform.ifc
include/: FrameRenderer.ixx  RenderWorker.ixx  TestEncoder.ixx
include/AI/: AIActionContext.ixx  AIColorAnalyzer.ixx  AIContext.ixx  AIPromptGenerator.ixx  AIToolExecutor.ixx  APIKeyManager.ixx  CommandIR.ixx  CommandSandbox.ixx  Describable.ixx  ICloudAIAgent.ixx  IDescribable.ixx  LlamaLocalAgent.ixx  LocalAIAgent.ixx  McpBridge.ixx  McpServerManager.ixx  McpToolMapper.ixx  McpTransport.ixx  ObjectDetector.ixx  OnnxDmlLocalAgent.ixx  TieredAIManager.ixx  ToolBridge.ixx
include/Analyze/: Analyze.ixx  Histgram.ixx  ImageAnalyzer.ixx  OptifalFlowResult.ixx  SmartPaletteAnalyzer.ixx
include/Animation/: Animatable(deprecated).ixx  Animatable.ixx  AnimatableTransform2D.ixx  AnimatableTransform3D.ixx  AnimatableValue.ixx  AnimationDynamics.ixx  EasingCurveUtil.ixx  KeyframeEditingTools.ixx  KeyframePatternGenerator.ixx
include/Application/: ArtifactAppSettings.ixx
include/Asset/: AbstractAssetFile.hpp  AbstractAssetFile.ixx  AsseetImporter.ixx  AssetConverter.ixx  AssetDatabase.hpp  AssetDatabase.ixx  AssetImportSetting.ixx  AssetImporter.ixx  AssetMetaFile.hpp  AssetMetaFile.ixx  AssetSequence.ixx  AssetType.ixx  DataAssetFile.ixx  ImageAsset.ixx  ProxyCacheManager.ixx  ProxyGenerator.ixx  ProxySettings.ixx  VectorImport.ixx
include/Audio/: ASIOBackendStub.ixx  Audio.ixx  AudioAnalyzer.ixx  AudioBackend.ixx  AudioBassTreble.ixx  AudioBufferQueue.ixx  AudioBus.ixx  AudioCache.ixx  AudioChorus.ixx  AudioCompressor.ixx  AudioDecibels.ixx  AudioDelay.ixx  AudioDownMixer.ixx  AudioDucking.ixx  AudioEffect.ixx  AudioFormat.ixx  AudioFrame.ixx  AudioFrameToQAudioFormatConverter.ixx  AudioHighLowPass.ixx  AudioMixer.ixx  AudioModule.ixx  AudioPanner.ixx  AudioParametricEQ.ixx  AudioProvider.ixx  AudioRasterizer.ixx  AudioRenderer.ixx  AudioReverb.ixx  AudioRingBuffer.ixx  AudioSegment.ixx  AudioSpectrum.ixx  AudioStereoMixer.ixx  AudioTone.ixx  AudioVolume.ixx  AudioWaveform.ixx  AudioWriter.ixx  FormantExtractor.ixx  LipSyncTrack.ixx  SimpleWav.ixx  WASAPIBackend.ixx  WaveformGenerator.ixx
include/CLAP/: CLAPHost.ixx
include/Channel/: Channel.ixx  Codec.ixx  DiskSize.ixx  Generator.cppm  Generator.ixx  OS.ixx
include/Clipboard/: ClipboardManager.ixx
include/Codec/: DecoderPoolManager.ixx  FFMpegAudioDecoder.ixx  FFmpegThumbnailExtractor.ixx  MFEncoder.ixx  MFFrameExtractor.ixx
include/Color/: Alpha.hpp  Alpha.ixx  AutoColorMatch.ixx  Color.ixx  ColorACES.ixx  ColorBlendMode.ixx  ColorConversion.ixx  ColorGamutConversion.ixx  ColorHarmonizer.ixx  ColorLUT.ixx  ColorLuminance.ixx  ColorSpace.ixx  ColorSwatch.ixx  ColorTransferFunction.ixx  FloatColor.hpp  FloatColor.ixx  FloatRGBA.hpp  FloatRGBA.ixx  Histgram.ixx  LUT.ixx  LUTWriter.ixx  LabColor.ixx  OCIOConfig.ixx  XYZColor.ixx
include/ColorCollection/: ColorGrading.ixx
include/Command/: CollaborationManager.ixx  CommandModule.ixx  CommonCommands.ixx  EditSession.ixx  EditSessionManager.ixx  LambdaCommand.ixx  LayerLockManager.ixx  OperationTransformer.ixx  SerializableCommand.ixx
include/Common/: Common.ixx  OperationgSystem.hpp  OperationgSystem.ixx  Parallel.ixx  Point2D.ixx  Size.ixx  ThreadPool.ixx
include/Composition/: AbstractCompositionBuffer.hpp  AbstractCompositionBuffer2D.ixx  CompositionBuffer2D.hpp  CompositionBuffer2D.ixx  CompositionContext.ixx  CompositionFinalEffect.ixx  ExportMatrix.ixx  OpenCVCompositionBuffer2D.hpp  ParametricComposition.ixx  PreCompose.ixx  TemplateLock.ixx  TemplateSlot.ixx
lib/: Qt6Cored.lib  Qt6Guid.lib  Qt6Networkd.lib
src/: AbstractDecoder.cpp
tools/: check_core_contracts.ps1  check_core_diagnostics_contract.ps1  check_core_module_hygiene.ps1  check_core_native_boundary.ps1  check_core_qt_boundary.ps1  check_core_string_boundary.ps1
(+1417 files in other folders)
